Criacao da Splash Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DesafioAndroid</string>
+    <string name="splash_de_comida">splash de comida</string>
 </resources>
