--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="or">OR</string>
+    <string name="name">Name</string>
+    <string name="repeat_password">Repeat password</string>
 </resources>
